--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 VITE_API_URL=https://attractive-kindness-rbe-serveurs.up.railway.app
 VITE_DEV_API_TARGET=http://localhost:3001
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://postgres:kufBlJfvgFQSHCnQyUgVqwGLthMXtyot@yamanote.proxy.rlwy.net:18663/railway?sslmode=require"
 PORT=3001
 SMTP_HOST=
 PUBLIC_API_BASE=http://localhost:8080
 PUBLIC_API_KEY=
 ALLOWED_CREATORS=
+NODE_ENV=development
