--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
-    "@prisma/client": "^5.20.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.8",
     "dotenv": "^17.2.3",
@@ -23,8 +22,6 @@
     "json2csv": "^6.0.0-alpha.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
-    "pdfkit": "^0.17.2",
-    "pg": "^8.16.3",
-    "prisma": "^5.20.0"
+    "pdfkit": "^0.17.2"
   }
 }
