fix: add pg package and make PostgreSQL connection optional

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "pg": "^8.11.3"
   }
 }
