--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
+    "@prisma/client": "^5.22.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.8",
     "dotenv": "^17.2.3",
@@ -24,5 +25,8 @@
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
