fix: ajouter postinstall script pour prisma generate (Railway/Vercel)

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node --watch ./src/server.js",
     "start": "node ./src/server.js",
     "build": "prisma generate",
+    "postinstall": "prisma generate",
     "backup": "node backup-full.mjs",
     "backup:full": "node backup-full.mjs",
     "backups:list": "node list-backups.mjs",
