--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_API_URL=https://attractive-kindness-rbe-serveurs.up.railway.app
 VITE_DEV_API_TARGET=http://localhost:3001
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://localhost:5432/retrobus_dev"
 PORT=3001
 SMTP_HOST=
 PUBLIC_API_BASE=http://localhost:8080
