--- a/.env.local
+++ b/.env.local
@@ -3,5 +3,6 @@
 
 VITE_API_URL=http://localhost:3001
 VITE_DEV_API_TARGET=http://localhost:3001
-DATABASE_URL="file:./dev.db"
+# PostgreSQL local - à adapter selon ta configuration
+DATABASE_URL="postgresql://localhost:5432/retrobus_dev"
 PORT=8080
