--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ SMTP_HOST=
 PUBLIC_API_BASE=http://localhost:8080
 PUBLIC_API_KEY=
 ALLOWED_CREATORS=
+
+# 🔧 Configuration de la persistance des données
+# En PRODUCTION, tous les modes avancés doivent être à false
+# pour que Prisma soit l'unique source de vérité
+LOAD_BACKUP_AT_BOOT=false
+ENABLE_MEMORY_FALLBACK=false
+ENABLE_RUNTIME_STATE_SAVE=false
