--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV=production
 VITE_API_URL=https://attractive-kindness-rbe-serveurs.up.railway.app
 VITE_DEV_API_TARGET=http://localhost:3001
 DATABASE_URL="postgresql://postgres:kufBlJfvgFQSHCnQyUgVqwGLthMXtyot@yamanote.proxy.rlwy.net:18663/railway"
