Fix: Change PORT to 8080 for Railway production environment

--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ NODE_ENV=production
 VITE_API_URL=https://attractive-kindness-rbe-serveurs.up.railway.app
 VITE_DEV_API_TARGET=http://localhost:3001
 DATABASE_URL="postgresql://postgres:kufBlJfvgFQSHCnQyUgVqwGLthMXtyot@yamanote.proxy.rlwy.net:18663/railway"
-PORT=3001
+PORT=8080
 SMTP_HOST=
-PUBLIC_API_BASE=http://localhost:8080
+PUBLIC_API_BASE=https://attractive-kindness-rbe-serveurs.up.railway.app
 PUBLIC_API_KEY=
 ALLOWED_CREATORS=
 
