--- a/.env.local
+++ b/.env.local
@@ -5,4 +5,5 @@ VITE_API_URL=http://localhost:3001
 VITE_DEV_API_TARGET=http://localhost:3001
 # PostgreSQL local - à adapter selon ta configuration
 DATABASE_URL="postgresql://localhost:5432/retrobus_dev"
-PORT=8080
+PORT=3001
+NODE_ENV=development
