--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ SMTP_HOST=
 PUBLIC_API_BASE=https://attractive-kindness-rbe-serveurs.up.railway.app
 PUBLIC_API_KEY=
 ALLOWED_CREATORS=
+ENABLE_RUNTIME_STATE_SAVE=true
 
 # 🔧 Configuration de la persistance des données
 # En PRODUCTION, tous les modes avancés doivent être à false
